Busqueda de producto

--- a/src/main/resources/META-INF/resources/ProductsList/ProductsList.html
+++ b/src/main/resources/META-INF/resources/ProductsList/ProductsList.html
@@ -36,7 +36,7 @@
   </form>
 </div>
 <div class="lista_productos">
-  <h2>Lista *nombre*</h2><!--Aqui va el nombre de la vista-->
+  <h2 id="nombre-lista">Lista *nombre*</h2>
 
   <table id="productos-table">
     <thead>
@@ -47,16 +47,7 @@
       </tr>
     </thead>
     <tbody id="productos-body">
-    <tr>
-      <td>Producto</td>
-      <td>Supermercado</td>
-      <td>Opciones</td>
-    </tr>
-      <!--Esta parte tiene que ser para cada elemento de la base de datos-->
 
-      <!--Mirar de añadir la cantidad a la base de datos-->
-
-      <!--Enlaces para MarcarComprado, Eliminar-->
     </tbody>
   </table>
 </div>
