Acceso API recetas

--- a/src/main/resources/META-INF/resources/Recipe/ReceipeListPage.html
+++ b/src/main/resources/META-INF/resources/Recipe/ReceipeListPage.html
@@ -37,7 +37,7 @@
         </tbody>
     </table>
 
-    <a href="RecipePage.html"> <button class="buttonr">Ver Pagina Receta</button>
+    <a href="RecipeFind.html"> <button class="buttonr">Añade nuevas recetas</button>
     </a>
 </main>
 <footer>
