Arreglados links Pagina de listas

--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -21,11 +21,11 @@
         <img src="../images/NutriCelia.png">
     </div>
     <nav>
-        <a href="HomePage.html">Inicio</a>
+        <a href="../HomePage.html">Inicio</a>
         <a href="#">Productos</a>
         <a href="ShoppingListListingPageV2.html">Mis Listas</a>
-        <a href="ReceipeListScreen.html">Recetas</a>
-        <a href="ForumScreen.html">Foros</a>
+        <a href="../Recipe/ReceipeListPage.html">Recetas</a>
+        <a href="../ForumScreen.html">Foros</a>
     </nav>
     <div class="user-profile">
         <img class="menu" src="../images/menu-icon.png">
