--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -98,7 +98,7 @@
             if (responseBuyList.ok && responseUsrAccList.ok) {
                 window.location.reload(); // Refrescar a la página
             } else {
-                alert("Error al crear la lista. Verifica el nombre.");
+                alert("Error al crear la lista. Verifica el nombre, puede que sea demasiado largo.");
             }
 
         } catch (error) {
