Enlace a UserDataPAge arreglado
En la pagina de listas

--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="user-profile">
         <img class="menu" src="../images/menu-icon.png">
-        <a href="UserDataScreen.html">
+        <a href="../UserScreens/UserDataPage.html">
             <button class="user-profile"><img src="../images/icon-user.png"></button>
         </a>
     </div>
