--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -44,7 +44,7 @@
     </form>
 
     <!-- Contenedor donde se mostrarán las listas de compra -->
-    <h2>Mis Listas de Compra</h2>
+    <h2>Mis listas de compra</h2>
     <div id="buyListsContainer">
         <p>Cargando listas...</p> <!-- Mensaje inicial mientras se cargan los datos -->
     </div>
