--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListPage.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListPage.html
@@ -31,7 +31,7 @@
     </div>
 </header>
 
-<h1>Productos en la lista</h1>
+<h1>Productos en la lista</h1> <!-- ESTA VISTA IGUAL HAY QUE BORRARLA NO ESTOY SEGURO -->
 <!--
 <main id="app">
     <h2>{{ listaNombre }}</h2>
