actualización del header y footer en todas las vistas

--- a/src/main/resources/META-INF/resources/ProductHistory/ProductHistoryPage.html
+++ b/src/main/resources/META-INF/resources/ProductHistory/ProductHistoryPage.html
@@ -14,19 +14,18 @@
 
 <header>
     <div class="logo">
-        <img src="../images/NutriCelia.png">
+        <img src="/images/NutriCelia.png">
     </div>
     <nav>
-        <a href="HomePage.html">Inicio</a>
-        <a href="#">Productos</a>
-        <a href="ShoppingListListingPageV2.html">Mis Listas</a>
-        <a href="ReceipeListScreen.html">Recetas</a>
-        <a href="ForumScreen.html">Foros</a>
+        <a href="/HomePage.html">Inicio</a>
+        <a href="/BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+        <a href="/Recipe/ReceipeListPage.html">Recetas</a>
+        <a href="/ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
-        <img class="menu" src="../images/menu-icon.png">
-        <a href="UserDataScreen.html">
-            <button class="user-profile"><img src="../images/icon-user.png"></button>
+        <img class="menu" src="/images/menu-icon.png">
+        <a href="/UserScreens/UserDataPage.html">
+            <button class="user-profile"><img src="/images/icon-user.png"></button>
         </a>
     </div>
 </header>
@@ -46,6 +45,13 @@
 
     <p v-else>No hay productos en el historial de compras.</p>
 </main>
+
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+        <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+    </div>
+</footer>
 
     <script src="../js/ProductHistoryMain.js"></script>
 </body>
