--- a/src/main/resources/META-INF/resources/Recipe/RecipePage.html
+++ b/src/main/resources/META-INF/resources/Recipe/RecipePage.html
@@ -9,19 +9,18 @@
 <body>
 <header>
     <div class="logo">
-        <img src="../images/NutriCelia.png">
+        <img src="/images/NutriCelia.png">
     </div>
     <nav>
-        <a href="../HomePage.html">Inicio</a>
-        <a href="../ProductsList/ProductsList.html?idLista=0">Productos</a>
-        <a href="../BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
-        <a href="ReceipeListPage.html">Recetas</a>
-        <a href="../ForumPage.html">Foros</a>
+        <a href="/HomePage.html">Inicio</a>
+        <a href="/BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+        <a href="/Recipe/ReceipeListPage.html">Recetas</a>
+        <a href="/ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
-        <img class="menu" src="../images/menu-icon.png">
-        <a href="../UserScreens/UserDataPage.html">
-            <button class="user-profile"><img src="../images/icon-user.png"></button>
+        <img class="menu" src="/images/menu-icon.png">
+        <a href="/UserScreens/UserDataPage.html">
+            <button class="user-profile"><img src="/images/icon-user.png"></button>
         </a>
     </div>
 </header>
