--- a/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
@@ -10,21 +10,18 @@
 
 <header>
     <div class="logo">
-        <a href="../HomePage.html">
-            <img src="../images/NutriCelia.png" alt="Logo">
-        </a>
+        <img src="/images/NutriCelia.png">
     </div>
     <nav>
-        <a href="../HomePage.html">Inicio</a>
-        <a href="../ProductsList/ProductsList.html?idLista=0">Productos</a>
-        <a href="../BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
-        <a href="../Recipe/ReceipeListPage.html">Recetas</a>
-        <a href="../ForumPage.html">Foros</a>
+        <a href="/HomePage.html">Inicio</a>
+        <a href="/BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+        <a href="/Recipe/ReceipeListPage.html">Recetas</a>
+        <a href="/ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
-        <img class="menu" src="../images/menu-icon.png">
-        <a href="UserDataPage.html">
-            <button class="user-profile"><img src="../images/icon-user.png"></button>
+        <img class="menu" src="/images/menu-icon.png">
+        <a href="/UserScreens/UserDataPage.html">
+            <button class="user-profile"><img src="/images/icon-user.png"></button>
         </a>
     </div>
 </header>
@@ -60,6 +57,14 @@
         <button onclick="saveChanges()" class="btn">Guardar Cambios</button>
     </div>
 </div>
+
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+        <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+    </div>
+</footer>
+
 <script src="userData.js"></script>
 </body>
 </html>
