--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -18,19 +18,18 @@
 
 <header>
     <div class="logo">
-        <img src="../images/NutriCelia.png">
+        <img src="/images/NutriCelia.png">
     </div>
     <nav>
-        <a href="../HomePage.html">Inicio</a>
-        <a href="#">Productos</a>
-        <a href="ShoppingListListingPageV2.html">Mis Listas</a>
-        <a href="../Recipe/ReceipeListPage.html">Recetas</a>
-        <a href="../ForumScreen.html">Foros</a>
+        <a href="/HomePage.html">Inicio</a>
+        <a href="/BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+        <a href="/Recipe/ReceipeListPage.html">Recetas</a>
+        <a href="/ForumPage.html">Foros</a>
     </nav>
     <div class="user-profile">
-        <img class="menu" src="../images/menu-icon.png">
-        <a href="../UserScreens/UserDataPage.html">
-            <button class="user-profile"><img src="../images/icon-user.png"></button>
+        <img class="menu" src="/images/menu-icon.png">
+        <a href="/UserScreens/UserDataPage.html">
+            <button class="user-profile"><img src="/images/icon-user.png"></button>
         </a>
     </div>
 </header>
@@ -354,5 +353,13 @@
         <button onclick="shareList()" class="btn">Compartir</button>
     </div>
 </div>
+
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+        <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+    </div>
+</footer>
+
 </body>
 </html>
