--- a/src/main/resources/META-INF/resources/ProductsList/ProductsList.html
+++ b/src/main/resources/META-INF/resources/ProductsList/ProductsList.html
@@ -10,21 +10,18 @@
 <body>
 <header>
   <div class="logo">
-    <a href="../HomePage.html">
-      <img src="../images/NutriCelia.png" alt="Logo">
-    </a>
+    <img src="/images/NutriCelia.png">
   </div>
   <nav>
-    <a href="../HomePage.html">Inicio</a>
-    <a href="#">Productos</a>
-    <a href="#">Mis Listas</a>
-    <a href="../Recipe/ReceipeListPage.html">Recetas</a>
-    <a href="../ForumPage.html">Foros</a>
+    <a href="/HomePage.html">Inicio</a>
+    <a href="/BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
+    <a href="/Recipe/ReceipeListPage.html">Recetas</a>
+    <a href="/ForumPage.html">Foros</a>
   </nav>
   <div class="user-profile">
-    <img class="menu" src="../images/menu-icon.png" alt="icono menu">
-    <a href="../UserScreens/UserDataPage.html">
-      <button class="user-profile"><img src="../images/icon-user.png" alt="icono usuario"></button>
+    <img class="menu" src="/images/menu-icon.png">
+    <a href="/UserScreens/UserDataPage.html">
+      <button class="user-profile"><img src="/images/icon-user.png"></button>
     </a>
   </div>
 </header>
@@ -55,5 +52,11 @@
 <script src="js/productsList.js"></script>
 
 </main>
+<footer>
+  <div class="footer-content">
+    <p>&copy; 2025 NutriCelia. Todos los derechos reservados.</p>
+    <p>NutriCelia es un proyecto desarrollado para las asignaturas EI1050 y EI1049.</p>
+  </div>
+</footer>
 </body>
 </html>
