Enlace de interfaces de productos

--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListListingPageV2.html
@@ -197,7 +197,8 @@
     }
 
     function goToProducts(id) {
-        window.location.href = `/ProductsList/ProductsList.html?IdLista=${id}`;
+
+        window.location.href = `/ProductsList/ProductsList.html?idLista=${id}`;
     }
 
     async function deleteBuyList(id) {
