Todo el apartado de foros funcionando correctamente con el usuario

--- a/src/main/resources/META-INF/resources/HomePage.html
+++ b/src/main/resources/META-INF/resources/HomePage.html
@@ -16,7 +16,7 @@
         <a href="#">Productos</a>
         <a href="BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
         <a href="Recipe/ReceipeListPage.html">Recetas</a>
-        <a href="/foro/">Foros</a>
+        <a href="/foro/lista">Foros</a>
     </nav>
     <div class="user-profile">
         <img class="menu" src="images/menu-icon.png">
@@ -55,7 +55,7 @@
             <div class="shopping">
                 <img src="images/forum.png">
             </div>
-            <a href="/foro/"><button class="btn" >
+            <a href="/foro/lista"><button class="btn" >
                 Consultar foros</button>
             </a>
 
