--- a/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
+++ b/src/main/resources/META-INF/resources/UserScreens/UserDataPage.html
@@ -19,7 +19,7 @@
         <a href="../ProductsList/ProductsList.html?idLista=0">Productos</a>
         <a href="../BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
         <a href="../Recipe/ReceipeListPage.html">Recetas</a>
-        <a href="../ForumPage.html">Foros</a>
+        <a href="../foro/lista">Foros</a>
     </nav>
     <div class="user-profile">
         <img class="menu" src="../images/menu-icon.png">
