Cambio menu en vistas ruta /foro/lista

--- a/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListPage.html
+++ b/src/main/resources/META-INF/resources/BuyListScreens/ShoppingListPage.html
@@ -20,7 +20,7 @@
         <a href="/HomePage.html">Inicio</a>
         <a href="/BuyListScreens/ShoppingListListingPageV2.html">Mis Listas</a>
         <a href="/Recipe/ReceipeListPage.html">Recetas</a>
-        <a href="/ForumPage.html">Foros</a>
+        <a href="/foro/lista">Foros</a>
     </nav>
     <div class="user-profile">
         <img class="menu" src="/images/menu-icon.png">
